Add user-agent to req_info

--- a/templates/index.html.hbs
+++ b/templates/index.html.hbs
@@ -8,6 +8,8 @@
     <h1>ifconfig.rs</h1>
     <h3>Your IP address is</h3>
     <code>{{ ip }}</code>
+    <h3>Your user agent is</h3>
+    <code>{{ user_agent }}</code>
   </body>
 </html>
 
