Add woothee for user agent parsing

--- a/templates/index.html.hbs
+++ b/templates/index.html.hbs
@@ -13,7 +13,7 @@
             <h3>Your IP address is</h3>
             <code>{{ ip }}</code>
             <h3>Your user agent is</h3>
-            <code>{{ user_agent }}</code>
+            <code>{{ user_agent.name }}</code>, version <code>{{ user_agent.version }}</code>
         </div>
     </body>
 </html>
