--- a/templates/index.html.hbs
+++ b/templates/index.html.hbs
@@ -10,10 +10,25 @@
         <div class="uk-container uk-container-center uk-margin-top">
             <h1>ifconfig.rs</h1>
             <p>Yet another ifconfig / what's my IP clone</p>
-            <h3>Your IP address is</h3>
-            <code>{{ ip }}</code>
-            <h3>Your user agent is</h3>
-            <code>{{ user_agent.name }}</code>, version <code>{{ user_agent.version }}</code>
+            <ul class="uk-grid">
+                <li class="uk-width-1-3">
+                    <div class="uk-panel uk-panel-box">
+                        <h3>Your IP Address</h3>
+                        <code>{{ ip.addr }}</code>, version <code>{{ ip.version }}</code>
+                    </div>
+                </li>
+                <li class="uk-width-1-3">
+                    <div class="uk-panel uk-panel-box">
+                        <h3>Your User Agent</h3>
+                        <code>{{ user_agent.name }}</code>, version <code>{{ user_agent.version }}</code>
+                    </div>
+                <li class="uk-width-1-3">
+                    <div class="uk-panel uk-panel-box">
+                        <h3>Your OS</h3>
+                        <code>{{ user_agent.os }}</code>, version <code>{{ user_agent.os_version }}</code>
+                    </div>
+                </li>
+            </ul>
         </div>
     </body>
 </html>
