--- a/templates/index.html.hbs
+++ b/templates/index.html.hbs
@@ -7,47 +7,90 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-beta.28/js/uikit.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-beta.28/js/uikit-icons.min.js"></script>
+        <style>
+            .ifconfig {
+                font-family: Monospace;
+            }
+        </style>
     </head>
     <body>
         <a href="https://github.com/lukaspustina/ifconfig-rs" class="github-corner" aria-label="View source on Github"><svg width="80" height="80" viewBox="0 0 250 250" style="fill:#151513; color:#fff; position: absolute; top: 0; border: 0; right: 0;" aria-hidden="true"><path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path><path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path><path d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z" fill="currentColor" class="octo-body"></path></svg></a><style>.github-corner:hover .octo-arm{animation:octocat-wave 560ms ease-in-out}@keyframes octocat-wave{0%,100%{transform:rotate(0)}20%,60%{transform:rotate(-25deg)}40%,80%{transform:rotate(10deg)}}@media (max-width:500px){.github-corner:hover .octo-arm{animation:none}.github-corner .octo-arm{animation:octocat-wave 560ms ease-in-out}}</style>
         <div class="uk-container">
-            <h1>ifconfig.rs</h1>
-            <hr>
+            <h1 class="uk-heading-primary uk-heading-line"><span>ifconfig.rs</span></h1>
             {{#with ifconfig}}
             <div class="uk-grid-match uk-grid-small" uk-grid>
                     <div class="uk-width-1-1@s">
                         <div>
-                            <h1 style="font-family: Monospace">{{ ip.addr }}</h1>
+                            <h1 class="ifconfig">{{ ip.addr }}</h1>
                         </div>
                     </div>
-                    <div class="uk-width-1-3@s">
+                    <div class="uk-width-1-4@s">
                         <div>
                             <h4>Hostname</h4>
-                            <code>{{ host.name }}</code>
+                            <span class="ifconfig">{{ host.name }}</span>
                         </div>
                     </div>
-                    <div class="uk-width-1-3@s">
+                     <div class="uk-width-1-4@s">
                         <div>
-                            <h4>User Agent</h4>
-                            <code>{{ user_agent.name }}</code>, version <code>{{ user_agent.version }}</code>
+                            <h4>Location</h4>
+                            <span class="ifconfig">Some City, Some Country</span>
                         </div>
                     </div>
-                    <div class="uk-width-1-3@s">
+                    <div class="uk-width-1-4@s">
+                        <span>
+                            <h4>User Agent</h4>
+                            <span class="ifconfig">{{ user_agent.name }}, {{ user_agent.version }}</span>
+                    </div>
+                    <div class="uk-width-1-4@s">
                         <div>
                             <h4>Operating System</h4>
-                            <code>{{ user_agent.os }}</code>, version <code>{{ user_agent.os_version }}</code>
+                            <span class="ifconfig">{{ user_agent.os }}, {{ user_agent.os_version }}</span>
                         </div>
                     </div>
             </div>
             <ul uk-accordion="multiple: true">
                 <li>
-                    <h3 class="uk-accordion-title">CLI Client Examples</h3>
+                    <h3 class="uk-accordion-title"><span class="uk-label">CLI Client Examples</span></h3>
                     <div class="uk-accordion-content">
                         <div class="uk-grid-match uk-grid-small" uk-grid>
-                            <div class="uk-width-1-3@s">
+                            <div class="uk-width-1-2@s">
                                 <div>
-                                    <h4>curl</h4>
-                                    <code>curl -H "Accept: application/json" http://ifconfig-rs.herokuapp.com</code>
+                                    <dl class="uk-description-list">
+                                        <dt>curl</dt>
+                                        <dd>
+<pre class="ifconfig">> curl {{ ../base_url }}{{ ../uri }}
+{{ ip.addr }}
+</pre>
+                                        </dd>
+                                    </dl>
+                                </div>
+                            </div>
+                            <div class="uk-width-1-2@s">
+                                <div>
+                                    <dl class="uk-description-list">
+                                        <dt>curl for Json</dt>
+                                        <dd>
+<pre class="ifconfig">> curl -H "Accept: application/json" {{ ../base_url }}{{ ../uri }}
+{
+  "host": {
+    "name": "{{ host.name }}"
+  },
+  "ip": {
+    "addr": "{{ ip.addr }}",
+    "version": "{{ ip.version }}"
+  },
+  "user_agent": {
+    "browser_type": "{{ user_agent.browser_type }}",
+    "category": "{{ user_agent.category }}",
+    "name": "{{ user_agent.name }}",
+    "os": "{{ user_agent.os }}",
+    "os_version": "{{ user_agent.os_version }}",
+    "vendor": "{{ user_agent.vendor }}",
+    "version": "{{ user_agent.version }}"
+  }
+}</pre>
+                                        </dd>
+                                    </dl>
                                 </div>
                             </div>
                         </div>
@@ -55,7 +98,6 @@
                 </li>
             </ul>
             {{/with}}
-            <hr>
             <h6>Yet another <em>what's my IP</em> service &mdash; <a href="https://github.com/lukaspustina/ifconfig-rs">ifconfig.rs</a> &mdash; version {{ version }}</h6>
         </div>
         <script src="https://getuikit.com/migrate.min.js"></script>
