Minor tweaks for index.html

--- a/templates/index.html.hbs
+++ b/templates/index.html.hbs
@@ -98,9 +98,8 @@
                 </li>
             </ul>
             {{/with}}
-            <h6>Yet another <em>what's my IP</em> service &mdash; <a href="https://github.com/lukaspustina/ifconfig-rs">ifconfig.rs</a> &mdash; version {{ version }}</h6>
+            <h6>Yet another <a class="uk-link-text" href="https://www.google.com/search?q=what's+my+ip+address">"what's my IP address"</a> service &mdash; <a href="https://github.com/lukaspustina/ifconfig-rs" uk-icon="icon:github"></a><a href="https://twitter.com/drivebytesting" uk-icon="icon:twitter"></a> &mdash; version {{ version }}</h6>
         </div>
         <script src="https://getuikit.com/migrate.min.js"></script>
     </body>
 </html>
-
