Some minor index.html templates tweaks

--- a/templates/index.html.hbs
+++ b/templates/index.html.hbs
@@ -33,10 +33,10 @@
                      <div class="uk-width-1-4@s">
                         <div>
                             <h4>Location</h4>
-                            <span class="ifconfig">{{ location.city }}, {{ location.country }}</span>
+                            <span class="ifconfig">{{#if location.city }}{{ location.city }}{{else}}-{{/if}}, {{#if location.country}}{{ location.country }}{{else}}-{{/if}}</span>
                             {{#if location.latitude }}
                                 {{# if location.longitude }}
-                                    <a href="https://www.google.com/maps/place/{{ location.city }},+{{ location.country }}/@{{ location.latitude }},{{ location.longitude }},12z" uk-icon="icon:world"></a>
+                                    <a href="https://www.google.com/maps/place/{{ location.city }},+{{ location.country }}/@{{ location.latitude }},{{ location.longitude }},12z" uk-icon="icon:world" title="Open Google Maps on this location." uk-tooltip></a>
                                 {{/if}}
                             {{/if}}
                         </div>
