--- a/templates/index.html.hbs
+++ b/templates/index.html.hbs
@@ -8,7 +8,11 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-beta.28/js/uikit.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-beta.28/js/uikit-icons.min.js"></script>
         <style>
-            .ifconfig {
+            .mono {
+                font-family: Monospace;
+                white-space: nowrap;
+            }
+            .mono-pre {
                 font-family: Monospace;
             }
         </style>
@@ -16,46 +20,113 @@
     <body>
         <a href="https://github.com/lukaspustina/ifconfig-rs" class="github-corner" aria-label="View source on Github"><svg width="80" height="80" viewBox="0 0 250 250" style="fill:#151513; color:#fff; position: absolute; top: 0; border: 0; right: 0;" aria-hidden="true"><path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path><path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path><path d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z" fill="currentColor" class="octo-body"></path></svg></a><style>.github-corner:hover .octo-arm{animation:octocat-wave 560ms ease-in-out}@keyframes octocat-wave{0%,100%{transform:rotate(0)}20%,60%{transform:rotate(-25deg)}40%,80%{transform:rotate(10deg)}}@media (max-width:500px){.github-corner:hover .octo-arm{animation:none}.github-corner .octo-arm{animation:octocat-wave 560ms ease-in-out}}</style>
         <div class="uk-container">
-            <h1 class="uk-heading-primary uk-heading-line"><span>ifconfig.rs</span></h1>
+            <h1 class="uk-heading-primary uk-heading-line"><span>{{ pkg_name }}</span></h1>
             {{#with ifconfig}}
             <div class="uk-grid-match uk-grid-small" uk-grid>
                     <div class="uk-width-1-1@s">
                         <div>
-                            <h1 class="ifconfig">{{ ip.addr }}</h1>
+                            <h1 class="mono">{{ ip.addr }}</h1>
                         </div>
                     </div>
                     <div class="uk-width-1-4@s">
                         <div>
                             <h4>Hostname</h4>
-                            <span class="ifconfig">{{ host.name }}</span>
+                            <span class="mono">{{ host.name }}</span>
                         </div>
                     </div>
                      <div class="uk-width-1-4@s">
                         <div>
                             <h4>Location</h4>
-                            <span class="ifconfig">{{#if location.city }}{{ location.city }}{{else}}-{{/if}}, {{#if location.country}}{{ location.country }}{{else}}-{{/if}}</span>
+                            <span class="mono">{{#if location.city }}{{ location.city }}{{else}}-{{/if}}, {{#if location.country}}{{ location.country }}{{else}}-{{/if}}</span>
                             {{#if location.latitude }}
                                 {{# if location.longitude }}
                                     <a href="https://www.google.com/maps/place/{{ location.city }},+{{ location.country }}/@{{ location.latitude }},{{ location.longitude }},12z" uk-icon="icon:world" title="Open Google Maps on this location." uk-tooltip></a>
                                 {{/if}}
                             {{/if}}
                             <br>
-                            <span class="ifconfig">{{#if isp.name }}{{ isp.name }}{{/if}}</span>
+                            <span class="mono">{{#if isp.name }}{{ isp.name }}{{/if}}</span>
                         </div>
                     </div>
                     <div class="uk-width-1-4@s">
                         <span>
                             <h4>User Agent</h4>
-                            <span class="ifconfig">{{ user_agent.name }}, {{ user_agent.version }}</span>
+                            <span class="mono">{{ user_agent.name }}, {{ user_agent.version }}</span>
                     </div>
                     <div class="uk-width-1-4@s">
                         <div>
                             <h4>Operating System</h4>
-                            <span class="ifconfig">{{ user_agent.os }}, {{ user_agent.os_version }}</span>
+                            <span class="mono">{{ user_agent.os }}, {{ user_agent.os_version }}</span>
                         </div>
                     </div>
             </div>
+            {{/with}}
             <ul uk-accordion="multiple: true">
+                <li>
+                    <h3 class="uk-accordion-title"><span class="uk-label">API</span></h3>
+                    <div class="uk-accordion-content">
+                        <div class="uk-grid-match uk-grid-small" uk-grid>
+                            <div class="uk-width-1-1@s">
+                                <div>
+                                    Every resource supports plain as well as JSON responses. JSON responses can be
+                                    requested by setting the corresponding <span class="mono">Accept</span> header,
+                                    i.e., <span class="mono">Accept: application/json</span>.
+                                    <dl class="uk-description-list">
+                                        <dt>GET <span class="mono">/</span></dt>
+                                        <dd>
+                                            <ul class="uk-list uk-list-bullet">
+                                                <li>
+                                                    <dl class="uk-description-list">
+                                                        <dt>Plain</dt>
+                                                        <dd>
+                                                            <p>For this resource, {{ pkg_name }} tries to identify
+                                                            whether a request is sent by CLI client and then only send
+                                                            the IP address. In this way, a simple <span class="mono">
+                                                            curl {{ base_url }}{{ uri }}</span> retrieves your IP
+                                                            address.</p>
+                                                            <p>For any other browser {{ pkg_name }} returns this
+                                                            beautiful HTML page you're currently looking at.</p>
+                                                        </dd>
+                                                    </dl>
+                                                </li>
+                                                <li>
+                                                    <dl class="uk-description-list">
+                                                        <dt>JSON</dt>
+                                                        <dd><pre class="mono-pre">{{ json }}</pre></dd>
+                                                    </dl>
+                                                </li>
+                                            </ul>
+                                        </dd>
+                                    </dl>
+                                    <dl class="uk-description-list">
+                                        <dt>GET <span class="mono">/ip</span></dt>
+                                        <dd>
+                                        </dd>
+                                    </dl>
+                                    <dl class="uk-description-list">
+                                        <dt>GET <span class="mono">/hostname</span></dt>
+                                        <dd>
+                                        </dd>
+                                    </dl>
+                                    <dl class="uk-description-list">
+                                        <dt>GET <span class="mono">/location</span></dt>
+                                        <dd>
+                                        </dd>
+                                    </dl>
+                                    <dl class="uk-description-list">
+                                        <dt>GET <span class="mono">/isp</span></dt>
+                                        <dd>
+                                        </dd>
+                                    </dl>
+                                    <dl class="uk-description-list">
+                                        <dt>GET <span class="mono">/user_agent</span></dt>
+                                        <dd>
+                                        </dd>
+                                    </dl>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </li>
                 <li>
                     <h3 class="uk-accordion-title"><span class="uk-label">CLI Client Examples</span></h3>
                     <div class="uk-accordion-content">
@@ -65,9 +136,41 @@
                                     <dl class="uk-description-list">
                                         <dt>curl</dt>
                                         <dd>
-<pre class="ifconfig">> curl {{ ../base_url }}{{ ../uri }}
-{{ ip.addr }}
-</pre>
+<pre class="mono-pre">> curl {{ base_url }}{{ uri }}
+{{ ifconfig.ip.addr }}</pre>
+                                        </dd>
+                                    </dl>
+                                </div>
+                            </div>
+                            <div class="uk-width-1-2@s">
+                                <div>
+                                    <dl class="uk-description-list">
+                                        <dt>wget</dt>
+                                        <dd>
+<pre class="mono-pre">> wget -qO - {{ base_url }}{{ uri }}
+{{ ifconfig.ip.addr }}</pre>
+                                        </dd>
+                                    </dl>
+                                </div>
+                            </div>
+                            <div class="uk-width-1-2@s">
+                                <div>
+                                    <dl class="uk-description-list">
+                                        <dt>httpie</dt>
+                                        <dd>
+<pre class="mono-pre">> http -b {{ base_url }}{{ uri }}
+{{ ifconfig.ip.addr }}</pre>
+                                        </dd>
+                                    </dl>
+                                </div>
+                            </div>
+                            <div class="uk-width-1-2@s">
+                                <div>
+                                    <dl class="uk-description-list">
+                                        <dt>fetch</dt>
+                                        <dd>
+<pre class="mono-pre">> fetch -qo- {{ base_url }}{{ uri }}
+{{ ifconfig.ip.addr }}</pre>
                                         </dd>
                                     </dl>
                                 </div>
@@ -77,8 +180,52 @@
                                     <dl class="uk-description-list">
                                         <dt>curl for Json</dt>
                                         <dd>
-<pre class="ifconfig">> curl -H "Accept: application/json" {{ ../base_url }}{{ ../uri }}
-{{ ../json }}</pre>
+<pre class="mono-pre">> curl -H "Accept: application/json" {{ base_url }}{{ uri }}
+{{ json }}</pre>
+                                        </dd>
+                                    </dl>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <h3 class="uk-accordion-title"><span class="uk-label">FAQ</span></h3>
+                    <div class="uk-accordion-content">
+                        <div class="uk-grid-match uk-grid-small" uk-grid>
+                           <div class="uk-width-1-1@s">
+                                <div>
+                                    <dl class="uk-description-list">
+                                        <dt>Where is this service hosted?</dt>
+                                        <dd>
+                                            The code run on a free-tier Heroku Autoscaling Dnyo that powers down when
+                                            there are not service accesses for a period of time. This may lead to a
+                                            large delay for the first request triggering a service restart.
+                                        </dd>
+                                    </dl>
+                                    <dl class="uk-description-list">
+                                        <dt>Does {{ pkg_name }} support IPv6?</dt>
+                                        <dd>
+                                            Currently, no. The code is agnostic regarding the IP version. Heroku
+                                            currently does not support IPv6 yet, so ifconfig.rs is only available via
+                                            IPv6. You can run your own version of ifconfig.rs at another, IPv6
+                                            supporting provider. Please see the project's
+                                            <a href="https://github.com/lukaspustina/ifconfig-rs">Readme</a> in the
+                                            GitHub repository for how details.
+                                        </dd>
+                                    </dl>
+                                    <dl class="uk-description-list">
+                                        <dt>Can I run my own instance of {{ pkg_name }}?</dt>
+                                        <dd>
+                                            Sure, you're welcome to. Just clone of fork the
+                                            <a href="https://github.com/lukaspustina/ifconfig-rs">GitHub repository</a>.
+                                        </dd>
+                                    </dl>
+                                    <dl class="uk-description-list">
+                                        <dt>Can you add &lt;feature&gt;, please?</dt>
+                                        <dd>
+                                            Yes, of course. Just contact me and let's discuss the details. Better, do
+                                            it yourself and send me a pull request.
                                         </dd>
                                     </dl>
                                 </div>
@@ -87,8 +234,7 @@
                     </div>
                 </li>
             </ul>
-            {{/with}}
-            <h6>Yet another <a class="uk-link-text" href="https://www.google.com/search?q=what's+my+ip+address">"what's my IP address"</a> service &mdash; <a href="https://github.com/lukaspustina/ifconfig-rs" uk-icon="icon:github"></a><a href="https://twitter.com/drivebytesting" uk-icon="icon:twitter"></a> &mdash; version {{ version }}</h6>
+            <h6><em>{{ pkg_name }}</em> is yet another <a class="uk-link-text" href="https://www.google.com/search?q=what's+my+ip+address">"what's my IP address"</a> service, currently running version {{ version }}. Feel free to contact me on <a href="https://github.com/lukaspustina/ifconfig-rs" uk-icon="icon:github"></a><a href="https://twitter.com/drivebytesting" uk-icon="icon:twitter"></a>.</h6>
         </div>
         <script src="https://getuikit.com/migrate.min.js"></script>
     </body>
