Minor bugfix for isp.name in index.html

--- a/templates/index.html.hbs
+++ b/templates/index.html.hbs
@@ -197,7 +197,7 @@
                                                     <dl class="uk-description-list">
                                                         <dt>Plain</dt>
                                                         <dd>
-                                                            <pre class="mono-pre">{{#if isp.name }}{{ isp.name }}{{else}}-{{/if}}</pre>
+                                                            <pre class="mono-pre">{{#if ifconfig.isp.name }}{{ ifconfig.isp.name }}{{else}}-{{/if}}</pre>
                                                         </dd>
                                                     </dl>
                                                 </li>
