Add os and os_version to plain /user_agent

--- a/templates/index.html.hbs
+++ b/templates/index.html.hbs
@@ -221,7 +221,7 @@
                                                     <dl class="uk-description-list">
                                                         <dt>Plain</dt>
                                                         <dd>
-                                                            <pre class="mono-pre">{{ ifconfig.user_agent.name }}, {{ ifconfig.user_agent.version }}</pre>
+                                                            <pre class="mono-pre">{{ ifconfig.user_agent.name }}, {{ ifconfig.user_agent.version }}, {{ ifconfig.user_agent.os }}, {{ ifconfig.user_agent.os_version }} </pre>
                                                         </dd>
                                                     </dl>
                                                 </li>
